改用sqlite3 优化注册登录前端脚本

--- a/templates/register.html
+++ b/templates/register.html
@@ -57,3 +57,9 @@
 		</div>
 	</div>
 {% endblock %}
+
+
+{% block extJS %}
+	<script type="text/javascript" src="{% static 'ttsx/js/register.js' %}"></script>
+{% endblock %}
+
