--- a/templates/login.html
+++ b/templates/login.html
@@ -3,6 +3,10 @@
 {% load static %}
 {% block title %}天天生鲜-登录{% endblock %}
 
+{% block extCSS %}
+	<link rel="stylesheet" type="text/css" href="{% static 'ttsx/css/login.css' %}">
+{% endblock %}
+
 {% block content %}
 	<div class="login_top clearfix">
 		<a href="index.html" class="login_logo"><img src="{% static 'ttsx/images/logo02.png' %}"></a>
@@ -18,19 +22,18 @@
 					<a href="{% url 'user:register' %}">立即注册</a>
 				</div>
 				<div class="form_input">
-
 					<form method="post" action="">
 						{% csrf_token %}
-						<input type="text" name="username" class="name_input" placeholder="请输入用户名">
+						<input type="text" id="user_name" name="username" class="name_input" placeholder="请输入用户名">
 						<div class="user_error">输入错误</div>
-						<input type="password" name="pwd" class="pass_input" placeholder="请输入密码">
+						<input type="password" id="pwd" name="pwd" class="pass_input" placeholder="请输入密码">
 						<div class="pwd_error">输入错误</div>
 						<div class="more_input clearfix">
 							<input type="checkbox" name="">
 							<label>记住用户名</label>
 							<a href="#">忘记密码</a>
 						</div>
-						{{ msg }}
+						<div class="login_error">{{ msg }}</div>
 						<input type="submit" name="" value="登录" class="input_submit">
 					</form>
 
@@ -38,4 +41,8 @@
 			</div>
 		</div>
 	</div>
+{% endblock %}
+
+{% block extJS %}
+	<script type="text/javascript" src="{% static 'ttsx/js/login.js' %}"></script>
 {% endblock %}
