优化购物车js脚本

--- a/templates/cart.html
+++ b/templates/cart.html
@@ -44,3 +44,7 @@
 		<li class="col04"><a href="{% url 'order:place_order' %}">去结算</a></li>
 	</ul>
 {% endblock %}
+
+{% block extJS %}
+		<script type="text/javascript" src="{% static 'ttsx/js/select.js' %}"></script>
+{% endblock %}
