--- a/templates/detail.html
+++ b/templates/detail.html
@@ -56,7 +56,7 @@
 			</div>
 			<div class="total">总价：<em id="price_total" >{{ goods.g_price }}</em> <em>元</em></div>
 			<div class="operate_btn">
-				<a href="{% url 'shopping:buycart' %}" id= {{ goods.id }} class="buy_btn">立即购买</a>
+				<a href="javascript:;" dir_url="{% url 'shopping:buycart' %}" id= {{ goods.id }} class="buy_btn">立即购买</a>
 				<a href="javascript:;"  onclick="add_cart({{ goods.id }});" class="add_cart" id="add_cart">加入购物车</a>
 			</div>
 		</div>
