--- a/templates/cart.html
+++ b/templates/cart.html
@@ -6,7 +6,7 @@
 
 {% block abr %}购物车{% endblock %}
 {% block content %}
-	<div class="total_count">全部商品<em id="all_num1"></em>件</div>
+	<div class="total_count">全部商品<em id="all_num1">{{ carts.count }}</em>件</div>
 	<ul class="cart_list_th clearfix">
 		<li class="col01">商品名称</li>
 		<li class="col02">商品单位</li>
@@ -18,20 +18,20 @@
 
 {% csrf_token %}
 {% for cart in carts %}
-	<ul class="cart_list_td clearfix">
+	<ul class="cart_list_td clearfix" id={{ cart.goods.id }}>
 		<li class="col01"><input type="checkbox" name="" checked></li>
 		<li class="col02"><img src="/media/{{ cart.goods.g_img }}"></li>
 		<li class="col03">{{ cart.goods.g_name }}<br><em>{{ cart.goods.g_price }}元/{{ cart.goods.g_unit }}</em></li>
 		<li class="col04">{{ cart.goods.g_unit }}</li>
-		<li class="col05">{{ cart.goods.g_price }}元</li>
+		<li class="col05"><em>{{ cart.goods.g_price }}</em><em>元</em></li>
 		<li class="col06">
 			<div class="num_add">
-				<a href="javascript:;" onclick="addgoods({{ cart.goods.id }})" class="add fl">+</a>
-				<input type="text" class="num_show_{{ cart.goods.id }} fl" value="1">
-				<a href="javascript:;" onclick="subgoods({{ cart.goods.id }})" class="minus fl">-</a>
+				<a href="javascript:;" class="add fl">+</a>
+				<input type="text" class="num_show_{{ cart.goods.id }} fl" value="{{ cart.count }}">
+				<a href="javascript:;" class="minus fl">-</a>
 			</div>
 		</li>
-		<li class="col07"><em id="price{{ cart.goods.id }}" >{{ goods.g_price }}</em> <em>元</em></li>
+		<li class="col07"><em id="price{{ cart.goods.id }}" ></em> <em>元</em></li>
 
 		<li class="col08"><a href="{% url 'shopping:delgoodscart' %}?cart_id={{ cart.id }}">删除</a></li>
 	</ul>
@@ -41,10 +41,11 @@
 		<li class="col01"><input type="checkbox" name="" checked=""></li>
 		<li class="col02">全选</li>
 		<li class="col03">合计(不含运费)：<span>¥</span><em id="tatal_price"></em><br>共计<b id="all_num"></b>件商品</li>
-		<li class="col04"><a href="{% url 'order:place_order' %}">去结算</a></li>
+		<li class="col04"><a href="javascript:;" dir_href="{% url 'order:place_order' %}">去结算</a></li>
 	</ul>
 {% endblock %}
 
 {% block extJS %}
+        <script type="text/javascript" src="{% static 'ttsx/common/ulelements.js' %}"></script>
 		<script type="text/javascript" src="{% static 'ttsx/js/select.js' %}"></script>
 {% endblock %}
