--- a/templates/cart.html
+++ b/templates/cart.html
@@ -41,7 +41,7 @@
 		<li class="col01"><input type="checkbox" name="" checked=""></li>
 		<li class="col02">全选</li>
 		<li class="col03">合计(不含运费)：<span>¥</span><em id="tatal_price"></em><br>共计<b id="all_num"></b>件商品</li>
-		<li class="col04"><a href="javascript:;" dir_href="{% url 'order:place_order' %}">去结算</a></li>
+		<li class="col04"><a href="javascript:;" dir_href="{% url 'order:place_order' %}">提交订单</a></li>
 	</ul>
 {% endblock %}
 
